* improved libgcc detection

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -636,7 +636,7 @@ endif
 # On linux, try to find where libgcc.a is.
 ifeq ($(OS_SOURCE),linux)
 ifndef GCCLIBDIR
-GCCLIBDIR:=$(shell dirname `(gcc -v 2>&1)| head -n 1| awk '{ print $$4 } '`)
+GCCLIBDIR:=$(shell dirname `gcc -print-libgcc-file-name`)
 endif
 ifndef OTHERLIBDIR
 OTHERLIBDIR:=$(shell grep -v "^\#" /etc/ld.so.conf | awk '{ ORS=" "; print $1 }')
