--- a/compiler/Makefile.fpc
+++ b/compiler/Makefile.fpc
@@ -51,6 +51,9 @@ endif
 ifdef X86_64
 PPC_TARGET=x86_64
 endif
+ifdef X86_64
+PPC_TARGET=arm
+endif
 
 # Default is to generate a compiler for the same
 # platform as CPU_TARGET (a native compiler)
@@ -118,6 +121,9 @@ endif
 ifeq ($(PPC_TARGET),x86_64)
 CPUSUF=x64
 endif
+ifeq ($(PPC_TARGET),arm)
+CPUSUF=arm
+endif
 
 # Do not define the default -d$(CPU_TARGET) because that
 # will conflict with our -d$(PPC_TARGET)
@@ -178,6 +184,11 @@ ifeq ($(PPC_TARGET),m68k)
 ifeq ($(OS_TARGET),amiga)
 override LOCALDEF+=-Ct
 endif
+endif
+
+# ARM specific
+ifeq ($(PPC_TARGET),arm)
+override LOCALDEF+=-dNOOPT
 endif
 
 PASDOC:=$(strip $(wildcard $(addsuffix /pasdoc.exe,$(SEARCHPATH))))
@@ -241,7 +252,7 @@ MSG2INC=./msg2inc$(EXEEXT)
 # CPU targets
 #####################################################################
 
-.PHONY: alpha i386 m68k powerpc sparc
+.PHONY: alpha i386 m68k powerpc sparc arm
 
 alpha:
         $(MAKE) PPC_TARGET=alpha CPU_UNITDIR=alpha all
@@ -257,6 +268,9 @@ powerpc:
 
 sparc:
         $(MAKE) PPC_TARGET=sparc CPU_UNITDIR=sparc all
+
+arm:
+        $(MAKE) PPC_TARGET=sparc CPU_UNITDIR=arm all
 
 #####################################################################
 # Default makefile
