--- a/fcl/image/Makefile.fpc
+++ b/fcl/image/Makefile.fpc
@@ -11,7 +11,7 @@ packages=paszlib
 [target]
 units=fpimgcmn fpimage pngcomn fpreadpng fpwritepng fpreadxpm fpwritexpm \
       clipping fpcanvas pixtools fppixlcanv fpimgcanv pscanvas fpwritebmp \
-      fpreadbmp bmpcomn fpreadpnm fpwritepnm fpreadjpeg.pas fpwritejpeg.pas \
+      fpreadbmp bmpcomn fpreadpnm fpwritepnm fpreadjpeg fpwritejpeg \
       ellipses
 units_win32=freetypeh freetype ftfont
 units_linux=freetypeh freetype ftfont
