--- a/packages/base/pasjpeg/Makefile.fpc
+++ b/packages/base/pasjpeg/Makefile.fpc
@@ -4,14 +4,16 @@
 
 [package]
 name=pasjpeg
-version=1.9.2
+version=1.9.3
 
 [target]
-units=jmorecfg jpeglib jdeferr jerror jcomapi jinclude rdcolmap cdjpeg \
-      jdapimin jmemmgr jutils jmemnobs jdmarker jdinput jdapistd jdmaster \
-      jdcolor jdsample jdpostct jddctmgr jdct jidctfst jidctint jidctflt \
-      jidctred jdphuff jdhuff jdcoefct jdmainct jquant2 jquant1 jdmerge \
-      jdatasrc wrbmp wrppm wrtarga
+units=jcapimin jcapistd jccoefct jccolor jcdctmgr jchuff jcinit jcmainct \
+      jcmarker jcmaster jcomapi jcparam jcphuff jcprepct jcsample jdapimin \
+      jdapistd jdatadst jdatasrc jdcoefct jdcolor jdct jddctmgr jdeferr \
+      jdhuff jdinput jdmainct jdmarker jdmaster jdmerge jdphuff jdpostct \
+      jdsample jerror jfdctflt jfdctfst jfdctint jidctflt jidctfst \
+      jidctint jidctred jinclude jmemmgr jmemnobs jmorecfg jpeglib \
+      jquant1 jquant2 jutils
 examples=cjpeg demo djpeg jpegtran rdjpgcom
 
 [install]
