* fixed macos entry

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -802,7 +802,8 @@ endif
 # MacOS
 ifeq ($(OS_TARGET),macos)
 EXEEXT=
-FPCMADE=fpcmade.mcc
+FPCMADE=fpcmade.macos
+ZIPSUFFIX=macos
 endif
 
 # Darwin
