--- a/fcl/Makefile.fpc
+++ b/fcl/Makefile.fpc
@@ -44,6 +44,7 @@ includedir_netbsd=unix
 includedir_openbsd=unix
 includedir_sunos=posix
 includedir_qnx=posix
+includedir_beos=posix
 includedir_emx=os2
 sourcedir=$(OS_TARGET) inc
 
