--- a/fcl/Makefile.fpc
+++ b/fcl/Makefile.fpc
@@ -4,38 +4,42 @@
 
 [package]
 name=fcl
-version=1.0.6
+version=1.9.2
 
 [require]
 packages=paszlib
 packages_linux=netdb libasync pthreads
-packages_freebsd=netdb libasync
+packages_freebsd=netdb libasync pthreads
+packages_darwin=netdb libasync pthreads
 packages_netbsd=netdb libasync
 packages_openbsd=netdb libasync
 packages_win32=netdb
 
 # clean package units
 [clean]
-units=adler gzcrc gzio infblock infcodes inffast inftrees infutil minigzip paszlib trees zbase zcompres zdeflate zinflate zuncompr zutil
+units=adler gzcrc gzio infblock infcodes inffast inftrees infutil minigzip paszlib trees zbase zcompres zdeflate zinflate zuncompr zutil pthreads
 
 [target]
-dirs=xml db shedit passrc net
-units=classes contnrs inifiles ezcgi pipes rtfpars idea base64 gettext iostream zstream cachecls xmlreg registry eventlog custapp cgiapp
-units_freebsd=process ssockets resolve fpasync
+dirs=xml image db shedit passrc net 
+units=$(CLASSES10) contnrs inifiles ezcgi pipes rtfpars idea base64 gettext \
+      iostream zstream cachecls xmlreg registry eventlog custapp cgiapp \
+      wformat whtml wtex
+units_freebsd=process ssockets resolve fpasync syncobjs
+units_darwin=process ssockets resolve fpasync syncobjs
 units_netbsd=process ssockets resolve fpasync
 units_openbsd=process ssockets resolve fpasync
 units_linux=process resolve ssockets fpasync syncobjs
 units_win32=process fileinfo resolve ssockets syncobjs
 units_netware=resolve ssockets
-rsts=classes ssockets cachecls resolve custapp
+rsts=$(CLASSES10) ssockets cachecls resolve custapp cgiapp eventlog registry
 exampledirs=tests
-
 [compiler]
 options=-S2
 targetdir=$(OS_TARGET)
 includedir=$(OS_TARGET) inc
 includedir_linux=unix
 includedir_freebsd=unix
+includedir_darwin=unix
 includedir_netbsd=unix
 includedir_openbsd=unix
 includedir_sunos=posix
@@ -53,5 +57,16 @@ fpcpackage=y
 [default]
 fpcdir=..
 
+[prerules]
+# Also build classes for 1.0.x 
+ifneq ($(findstring 1.0.,$(FPC_VERSION)),)
+CLASSES10=classes
+endif
+
 [rules]
+ifdef CLASSES10
+classes$(PPUEXT):
+	$(COMPILER) -Ficlasses -Ficlasses/$(OS_TARGET) classes/$(OS_TARGET)/classes.pp
+endif
+
 xmlreg.pp: xml
